<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_share">Share</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_units_label">Temprature Unit</string>
    <string name="pref_units_key" translatable="false">temp_unit</string>
    <string name="pref_units_default" translatable="false">Celsius</string>

    <string name="pref_units_metric">Celsius</string>
    <string name="pref_units_imperial">Fahrenheit</string>


    <!-- Remember to set the root element of strings.xml to be <resources xmlns:xliff="http://schemas.android.com/apk/res-auto"> so it recognizes the xliff tags -->

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <string name="format_temprature"><xliff:g id = "temp">%1.0f</xliff:g>\u00B0</string>
    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.ravindrasaini.sunshine</string>
    <string name="perf_last_sync">last_sync</string>
    <string name="pref_last_notification">last_notification</string>
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g>
    </string>


    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
<string name="format_wind_mph">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
<string name="format_wind_kmh">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g>%%</string>

    <string-array name="pref_units_options">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="pref_units_values">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    
    <string name="perf_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="perf_enable_notification_label">Weather Notifications</string>

    <string name="perf_enable_notification_true">Enabled</string>
    <string name="perf_enable_notification_false">Not Enabled</string>
    <string name="perf_enable_notification_default" translatable="false">true</string>

    <string name="action_map" translatable="false">Map Location</string>


</resources>
